--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+/jobImg/1.png
+/jobImg/1-1667116984596-3.png
+/jobImg/1-1667117193630-5.png
+/jobImg/2.png
+/jobImg/image-20221030160204435.png
